--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -1,7 +1,8 @@
 services:
   - type: web
-    name: gmeet-summarizer-api
+    name: scribdo
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install -r backend/requirements.txt
     startCommand: ./start.sh
+    rootDir: backend
